deployment/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aeo-web
  namespace: aeo
spec:
  selector:
    app: aeo-web
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  type: ClusterIP
